@@ -7,16 +7,10 @@ Bundle-Vendor: Open-Xchange Inc.
 Bundle-RequiredExecutionEnvironment: JavaSE-1.6
 Import-Package: com.amazonaws,
  com.amazonaws.auth,
- com.amazonaws.event,
- com.amazonaws.handlers,
- com.amazonaws.http,
  com.amazonaws.regions,
  com.amazonaws.services.s3,
  com.amazonaws.services.s3.internal,
  com.amazonaws.services.s3.model,
- com.amazonaws.services.s3.model.transform,
- com.amazonaws.services.s3.transfer,
- com.amazonaws.util,
  com.openexchange.cache.dynamic,
  com.openexchange.config,
  com.openexchange.configuration,
